--- a/style.css
+++ b/style.css
@@ -193,6 +193,10 @@ section {
     margin: auto 0;
 }
 
+.profile-pic {
+    border-radius: 2rem;
+}
+
 .section__text {
     align-self: center;
     text-align: center;
@@ -221,6 +225,7 @@ section {
     justify-content: center;
     margin-top: 1rem;
     gap: 1rem;
+    /* min-height: fit-content */
 }
 
 /* ICONS */
@@ -249,11 +254,6 @@ section {
 .btn-color-1, 
 .btn-color-2 {
     border: rgb(53, 53, 53) 0.1rem solid;
-}
-
-.btn-color-1:hover,
-.btn-color-2:hover {
-    cursor: pointer;
 }
 
 .btn-color-1:hover,
